// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sequence component should render 1`] = `
<DocumentFragment>
  <div>
    <section
      class="sequence-container"
    >
      <div
        class="action-bar button-group"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown"
        >
          <button
            class="button tertiary"
            type="button"
          >
            Tools
          </button>
        </div>
        <a
          class="button tertiary"
          download=""
          href="https://url-to-P05067.fasta"
        >
          <test-file-stub />
          Download
        </a>
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown"
        >
          <button
            class="button tertiary"
            type="button"
          >
            Highlight
          </button>
        </div>
      </div>
      <div
        class="sequence"
      >
        <span
          class="sequence__chunk"
        >
          MFNFPHPAID
        </span>
        <span
          class="sequence__chunk"
        >
          LASRMKSSPL
        </span>
        <span
          class="sequence__chunk"
        >
          MAGGSSSASS
        </span>
        <span
          class="sequence__chunk"
        >
          EDLFSPPMME
        </span>
        <span
          class="sequence__chunk"
        >
          DLDTPMTEYP
        </span>
        <span
          class="sequence__chunk"
        >
          MGSPPRMPYR
        </span>
        <span
          class="sequence__chunk"
        >
          GEDIEIAFLR
        </span>
        <span
          class="sequence__chunk"
        >
          SEASIKKSSL
        </span>
        <span
          class="sequence__chunk"
        >
          FNDKFAATLD
        </span>
        <span
          class="sequence__chunk"
        >
          DLSARPIDSA
        </span>
        <span
          class="sequence__chunk"
        >
          SLIGKLQSMT
        </span>
        <span
          class="sequence__chunk"
        >
          RSVREILDSG
        </span>
        <span
          class="sequence__chunk"
        >
          GEDIEIAFLR
        </span>
        <span
          class="sequence__chunk"
        >
          SEASIKKSSL
        </span>
        <span
          class="sequence__chunk"
        >
          FNDKFAATLD
        </span>
        <span
          class="sequence__chunk"
        >
          DLSARPIDSA
        </span>
        <span
          class="sequence__chunk"
        >
          SLIGKLQSMT
        </span>
        <span
          class="sequence__chunk"
        >
          RSVREILDSG
        </span>
        <span
          class="sequence__chunk"
        >
          DQLVHEDGPQ
        </span>
        <span
          class="sequence__chunk"
        >
          EILKQFVRVV
        </span>
        <span
          class="sequence__chunk"
        >
          NKHLCQDEDI
        </span>
        <span
          class="sequence__chunk"
        >
          HTVLAPLALE
        </span>
        <span
          class="sequence__chunk"
        >
          PEEKFHIIQT
        </span>
        <span
          class="sequence__chunk"
        >
          YYQAISMTQF
        </span>
        <span
          class="sequence__chunk"
        >
          DQLVHEDGPQ
        </span>
        <span
          class="sequence__chunk"
        >
          EILKQFVRVV
        </span>
        <span
          class="sequence__chunk"
        >
          NKHLCQDEDI
        </span>
        <span
          class="sequence__chunk"
        >
          HTVLAPLALE
        </span>
        <span
          class="sequence__chunk"
        >
          PEEKFHIIQT
        </span>
        <span
          class="sequence__chunk"
        >
          YYQAISMTQF
        </span>
        <span
          class="sequence__chunk"
        >
          VSPKWTSSLL
        </span>
        <span
          class="sequence__chunk"
        >
          SDALCRRANI
        </span>
        <span
          class="sequence__chunk"
        >
          VTVFNGQGVE
        </span>
        <span
          class="sequence__chunk"
        >
          GYFSELQHLY
        </span>
        <span
          class="sequence__chunk"
        >
          DTYGGLLAEP
        </span>
        <span
          class="sequence__chunk"
        >
          LYALSKQLKG
        </span>
        <span
          class="sequence__chunk"
        >
          VSPKWTSSLL
        </span>
        <span
          class="sequence__chunk"
        >
          SDALCRRANI
        </span>
        <span
          class="sequence__chunk"
        >
          VTVFNGQGVE
        </span>
        <span
          class="sequence__chunk"
        >
          GYFSELQHLY
        </span>
        <span
          class="sequence__chunk"
        >
          DTYGGLLAEP
        </span>
        <span
          class="sequence__chunk"
        >
          LYALSKQLKG
        </span>
        <span
          class="sequence__chunk"
        >
          LASDVRAQDM
        </span>
        <span
          class="sequence__chunk"
        >
          YPHGLDVIGW
        </span>
        <span
          class="sequence__chunk"
        >
          LENPEARPST
        </span>
        <span
          class="sequence__chunk"
        >
          DYLLSAPVSQ
        </span>
        <span
          class="sequence__chunk"
        >
          PLIGLVQLLN
        </span>
        <span
          class="sequence__chunk"
        >
          YAITCKILNK
        </span>
        <span
          class="sequence__chunk"
        >
          LASDVRAQDM
        </span>
        <span
          class="sequence__chunk"
        >
          YPHGLDVIGW
        </span>
        <span
          class="sequence__chunk"
        >
          LENPEARPST
        </span>
        <span
          class="sequence__chunk"
        >
          DYLLSAPVSQ
        </span>
        <span
          class="sequence__chunk"
        >
          PLIGLVQLLN
        </span>
        <span
          class="sequence__chunk"
        >
          YAITCKILNK
        </span>
        <span
          class="sequence__chunk"
        >
          SPGEFARHLS
        </span>
        <span
          class="sequence__chunk"
        >
          GSAGHSQGIV
        </span>
        <span
          class="sequence__chunk"
        >
          VAAMLATVVS
        </span>
        <span
          class="sequence__chunk"
        >
          WPTFFDAAST
        </span>
        <span
          class="sequence__chunk"
        >
          ALQVLFWIGC
        </span>
        <span
          class="sequence__chunk"
        >
          RSQQCYPSHS
        </span>
        <span
          class="sequence__chunk"
        >
          SPGEFARHLS
        </span>
        <span
          class="sequence__chunk"
        >
          GSAGHSQGIV
        </span>
        <span
          class="sequence__chunk"
        >
          VAAMLATVVS
        </span>
        <span
          class="sequence__chunk"
        >
          WPTFFDAAST
        </span>
        <span
          class="sequence__chunk"
        >
          ALQVLFWIGC
        </span>
        <span
          class="sequence__chunk"
        >
          RSQQCYPSHS
        </span>
        <span
          class="sequence__chunk"
        >
          IPPSLVDQSE
        </span>
        <span
          class="sequence__chunk"
        >
          RLSPMLSVKG
        </span>
        <span
          class="sequence__chunk"
        >
          ASRESLLKYL
        </span>
        <span
          class="sequence__chunk"
        >
          DEHNRHLPPA
        </span>
        <span
          class="sequence__chunk"
        >
          QQGSLALING
        </span>
        <span
          class="sequence__chunk"
        >
          RQQFVVAGNP
        </span>
        <span
          class="sequence__chunk"
        >
          IPPSLVDQSE
        </span>
        <span
          class="sequence__chunk"
        >
          RLSPMLSVKG
        </span>
        <span
          class="sequence__chunk"
        >
          ASRESLLKYL
        </span>
        <span
          class="sequence__chunk"
        >
          DEHNRHLPPA
        </span>
        <span
          class="sequence__chunk"
        >
          QQGSLALING
        </span>
        <span
          class="sequence__chunk"
        >
          RQQFVVAGNP
        </span>
        <span
          class="sequence__chunk"
        >
          LSLYAFANKL
        </span>
        <span
          class="sequence__chunk"
        >
          RAASNNSSTT
        </span>
        <span
          class="sequence__chunk"
        >
          NTARVPFSQR
        </span>
        <span
          class="sequence__chunk"
        >
          PLLITARFLP
        </span>
        <span
          class="sequence__chunk"
        >
          ISVPFHTSLL
        </span>
        <span
          class="sequence__chunk"
        >
          EDAEAQILED
        </span>
        <span
          class="sequence__chunk"
        >
          ED
        </span>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Sequence component should render without tools 1`] = `
<DocumentFragment>
  <div>
    <section
      class="sequence-container"
    >
      <div
        class="sequence"
      >
        <span
          class="sequence__chunk"
        >
          MFNFPHPAID
        </span>
        <span
          class="sequence__chunk"
        >
          LASRMKSSPL
        </span>
        <span
          class="sequence__chunk"
        >
          MAGGSSSASS
        </span>
        <span
          class="sequence__chunk"
        >
          EDLFSPPMME
        </span>
        <span
          class="sequence__chunk"
        >
          DLDTPMTEYP
        </span>
        <span
          class="sequence__chunk"
        >
          MGSPPRMPYR
        </span>
        <span
          class="sequence__chunk"
        >
          GEDIEIAFLR
        </span>
        <span
          class="sequence__chunk"
        >
          SEASIKKSSL
        </span>
        <span
          class="sequence__chunk"
        >
          FNDKFAATLD
        </span>
        <span
          class="sequence__chunk"
        >
          DLSARPIDSA
        </span>
        <span
          class="sequence__chunk"
        >
          SLIGKLQSMT
        </span>
        <span
          class="sequence__chunk"
        >
          RSVREILDSG
        </span>
        <span
          class="sequence__chunk"
        >
          GEDIEIAFLR
        </span>
        <span
          class="sequence__chunk"
        >
          SEASIKKSSL
        </span>
        <span
          class="sequence__chunk"
        >
          FNDKFAATLD
        </span>
        <span
          class="sequence__chunk"
        >
          DLSARPIDSA
        </span>
        <span
          class="sequence__chunk"
        >
          SLIGKLQSMT
        </span>
        <span
          class="sequence__chunk"
        >
          RSVREILDSG
        </span>
        <span
          class="sequence__chunk"
        >
          DQLVHEDGPQ
        </span>
        <span
          class="sequence__chunk"
        >
          EILKQFVRVV
        </span>
        <span
          class="sequence__chunk"
        >
          NKHLCQDEDI
        </span>
        <span
          class="sequence__chunk"
        >
          HTVLAPLALE
        </span>
        <span
          class="sequence__chunk"
        >
          PEEKFHIIQT
        </span>
        <span
          class="sequence__chunk"
        >
          YYQAISMTQF
        </span>
        <span
          class="sequence__chunk"
        >
          DQLVHEDGPQ
        </span>
        <span
          class="sequence__chunk"
        >
          EILKQFVRVV
        </span>
        <span
          class="sequence__chunk"
        >
          NKHLCQDEDI
        </span>
        <span
          class="sequence__chunk"
        >
          HTVLAPLALE
        </span>
        <span
          class="sequence__chunk"
        >
          PEEKFHIIQT
        </span>
        <span
          class="sequence__chunk"
        >
          YYQAISMTQF
        </span>
        <span
          class="sequence__chunk"
        >
          VSPKWTSSLL
        </span>
        <span
          class="sequence__chunk"
        >
          SDALCRRANI
        </span>
        <span
          class="sequence__chunk"
        >
          VTVFNGQGVE
        </span>
        <span
          class="sequence__chunk"
        >
          GYFSELQHLY
        </span>
        <span
          class="sequence__chunk"
        >
          DTYGGLLAEP
        </span>
        <span
          class="sequence__chunk"
        >
          LYALSKQLKG
        </span>
        <span
          class="sequence__chunk"
        >
          VSPKWTSSLL
        </span>
        <span
          class="sequence__chunk"
        >
          SDALCRRANI
        </span>
        <span
          class="sequence__chunk"
        >
          VTVFNGQGVE
        </span>
        <span
          class="sequence__chunk"
        >
          GYFSELQHLY
        </span>
        <span
          class="sequence__chunk"
        >
          DTYGGLLAEP
        </span>
        <span
          class="sequence__chunk"
        >
          LYALSKQLKG
        </span>
        <span
          class="sequence__chunk"
        >
          LASDVRAQDM
        </span>
        <span
          class="sequence__chunk"
        >
          YPHGLDVIGW
        </span>
        <span
          class="sequence__chunk"
        >
          LENPEARPST
        </span>
        <span
          class="sequence__chunk"
        >
          DYLLSAPVSQ
        </span>
        <span
          class="sequence__chunk"
        >
          PLIGLVQLLN
        </span>
        <span
          class="sequence__chunk"
        >
          YAITCKILNK
        </span>
        <span
          class="sequence__chunk"
        >
          LASDVRAQDM
        </span>
        <span
          class="sequence__chunk"
        >
          YPHGLDVIGW
        </span>
        <span
          class="sequence__chunk"
        >
          LENPEARPST
        </span>
        <span
          class="sequence__chunk"
        >
          DYLLSAPVSQ
        </span>
        <span
          class="sequence__chunk"
        >
          PLIGLVQLLN
        </span>
        <span
          class="sequence__chunk"
        >
          YAITCKILNK
        </span>
        <span
          class="sequence__chunk"
        >
          SPGEFARHLS
        </span>
        <span
          class="sequence__chunk"
        >
          GSAGHSQGIV
        </span>
        <span
          class="sequence__chunk"
        >
          VAAMLATVVS
        </span>
        <span
          class="sequence__chunk"
        >
          WPTFFDAAST
        </span>
        <span
          class="sequence__chunk"
        >
          ALQVLFWIGC
        </span>
        <span
          class="sequence__chunk"
        >
          RSQQCYPSHS
        </span>
        <span
          class="sequence__chunk"
        >
          SPGEFARHLS
        </span>
        <span
          class="sequence__chunk"
        >
          GSAGHSQGIV
        </span>
        <span
          class="sequence__chunk"
        >
          VAAMLATVVS
        </span>
        <span
          class="sequence__chunk"
        >
          WPTFFDAAST
        </span>
        <span
          class="sequence__chunk"
        >
          ALQVLFWIGC
        </span>
        <span
          class="sequence__chunk"
        >
          RSQQCYPSHS
        </span>
        <span
          class="sequence__chunk"
        >
          IPPSLVDQSE
        </span>
        <span
          class="sequence__chunk"
        >
          RLSPMLSVKG
        </span>
        <span
          class="sequence__chunk"
        >
          ASRESLLKYL
        </span>
        <span
          class="sequence__chunk"
        >
          DEHNRHLPPA
        </span>
        <span
          class="sequence__chunk"
        >
          QQGSLALING
        </span>
        <span
          class="sequence__chunk"
        >
          RQQFVVAGNP
        </span>
        <span
          class="sequence__chunk"
        >
          IPPSLVDQSE
        </span>
        <span
          class="sequence__chunk"
        >
          RLSPMLSVKG
        </span>
        <span
          class="sequence__chunk"
        >
          ASRESLLKYL
        </span>
        <span
          class="sequence__chunk"
        >
          DEHNRHLPPA
        </span>
        <span
          class="sequence__chunk"
        >
          QQGSLALING
        </span>
        <span
          class="sequence__chunk"
        >
          RQQFVVAGNP
        </span>
        <span
          class="sequence__chunk"
        >
          LSLYAFANKL
        </span>
        <span
          class="sequence__chunk"
        >
          RAASNNSSTT
        </span>
        <span
          class="sequence__chunk"
        >
          NTARVPFSQR
        </span>
        <span
          class="sequence__chunk"
        >
          PLLITARFLP
        </span>
        <span
          class="sequence__chunk"
        >
          ISVPFHTSLL
        </span>
        <span
          class="sequence__chunk"
        >
          EDAEAQILED
        </span>
        <span
          class="sequence__chunk"
        >
          ED
        </span>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
